Fixed content justification of filterbar contents on small screens.

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -469,7 +469,7 @@ code.language-tile38-cli .hljs-geojson {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   padding: 0 0;
   margin-bottom: 15px;
 }
